--- a/Bienvenido.html
+++ b/Bienvenido.html
@@ -7,6 +7,7 @@
     <title>Bienvenido</title>
 </head>
 <body>
-<h1>BIENVENIDO AL PROYECTO 😎</h1>
+<h1>BIENVENIDO AL PROYECTO 😎😁</h1>
+<h1>GG</h1>
 </body>
 </html>
